# flutter_faust_ffi

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_faust_ffi/: MainActivity.kt
dsp_c/: CMakeLists.txt  FaustFlutterC.c  FaustFlutterC.def  FaustFlutterC.dsp  FaustFlutterC.h
dsp_c/faust/: CInterface.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/dsp_dart/: api_types.dart  audio_player.dart  dsp_api.dart  generated_bindings.dart  my_audio_player.dart  stereo_player.dart  synth.dart  wave_file.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
